# realtime-context-streaming

./: .gitignore  IMPLEMENTATION.md  README.md  TODO.md
client/: .cta.json  package.json  pnpm-lock.yaml  vite.config.ts
client/src/: env.ts  routeTree.gen.ts  styles.css
client/src/components/: Header.tsx  Layout.tsx  OCRDisplay.tsx  PageLayout.tsx  STTDisplay.tsx  Sidebar.tsx  StreamPipeline.tsx
client/src/hooks/: useFrameCapture.ts  useSTT.ts
client/src/lib/: api.ts  notifications.ts
client/src/lib/api/: client.ts
client/src/lib/atoms/: focusTimerAtom.ts  notificationAtoms.ts  notificationHistoryAtom.ts  queryAtoms.ts
client/src/lib/components/: FlashcardView.tsx  StatsDashboard.tsx  StudyAssistantPanel.tsx
client/src/lib/hooks/: useStudyQueries.ts
client/src/lib/providers/: FocusTimerProvider.tsx
client/src/pages/: Dashboard.tsx  Schedule.tsx  focus.tsx
client/src/routes/: Schedule.tsx  __root.tsx  index.tsx
client/src/routes/api/: transcript.ts
client/src/routes/study/: flashcards.tsx  focus.tsx  materials.tsx  stats.tsx
server/: .env.example  db.py  embeddings.py  groq_service.py  ingestion_buffer.py  main.py  models.py  ocr.py  pyproject.toml  study_data.db  study_models.py  vision.py  ws_manager.py
server/chroma_db/: chroma.sqlite3
