[project]
name = "server"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.1",
    "fastapi[standard]>=0.131.0",
    "faster-whisper>=1.2.1",
    "llama-cpp-python>=0.3.16",
    "numpy>=2.4.2",
    "sentence-transformers>=5.2.3",
    "websocket>=0.2.1",
    "websockets>=16.0",
]
